--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,175 @@
     android:layout_height="match_parent"
     tools:context="ar.edu.utn.fra.lab5.calculadora.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <Button
+        android:id="@+id/btn1"
+        android:layout_width="55dp"
+        android:layout_height="48dp"
+        android:text="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/btn2"
+        app:layout_constraintTop_toBottomOf="@+id/btn4"
+        app:layout_constraintBottom_toTopOf="@+id/btn0"/>
+
+    <Button
+        android:id="@+id/btn2"
+        android:layout_width="55dp"
+        android:layout_height="48dp"
+        android:text="2"
+        app:layout_constraintLeft_toRightOf="@+id/btn1"
+        app:layout_constraintRight_toLeftOf="@+id/btn3"
+        app:layout_constraintTop_toBottomOf="@+id/btn5"
+        app:layout_constraintBottom_toTopOf="@+id/btnComa"
+        />
+
+    <Button
+        android:id="@+id/btn3"
+        android:layout_width="55dp"
+        android:layout_height="48dp"
+        android:text="3"
+        app:layout_constraintLeft_toRightOf="@+id/btn2"
+        app:layout_constraintRight_toLeftOf="@+id/btnMas"
+        app:layout_constraintTop_toBottomOf="@+id/btn6"
+        app:layout_constraintBottom_toTopOf="@+id/btnComa"/>
+
+
+
+    <Button
+        android:id="@+id/btn4"
+        android:layout_width="55dp"
+        android:layout_height="48dp"
+        android:text="4"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/btn5"
+        app:layout_constraintTop_toBottomOf="@+id/btn7"
+        app:layout_constraintBottom_toTopOf="@+id/btn1"/>
+
+    <Button
+        android:id="@+id/btn5"
+        android:layout_width="55dp"
+        android:layout_height="48dp"
+        android:text="5"
+        app:layout_constraintLeft_toRightOf="@+id/btn4"
+        app:layout_constraintRight_toLeftOf="@+id/btn6"
+        app:layout_constraintTop_toBottomOf="@+id/btn8"
+        app:layout_constraintBottom_toTopOf="@+id/btn2"/>
+
+    <Button
+        android:id="@+id/btn6"
+        android:layout_width="55dp"
+        android:layout_height="48dp"
+        android:text="6"
+        app:layout_constraintLeft_toRightOf="@+id/btn5"
+        app:layout_constraintRight_toLeftOf="@+id/btnMenos"
+        app:layout_constraintTop_toBottomOf="@+id/btn9"
+        app:layout_constraintBottom_toTopOf="@+id/btn3"/>
+
+    <Button
+        android:id="@+id/btn7"
+        android:layout_width="55dp"
+        android:layout_height="48dp"
+        android:text="7"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/btn8"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintBottom_toTopOf="@+id/btn4"/>
+
+    <Button
+        android:id="@+id/btn8"
+        android:layout_width="55dp"
+        android:layout_height="48dp"
+        android:text="8"
+        app:layout_constraintLeft_toRightOf="@+id/btn7"
+        app:layout_constraintRight_toLeftOf="@+id/btn9"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintBottom_toTopOf="@+id/btn5"/>
+
+    <Button
+        android:id="@+id/btn9"
+        android:layout_width="55dp"
+        android:layout_height="48dp"
+        android:text="9"
+        app:layout_constraintLeft_toRightOf="@+id/btn8"
+        app:layout_constraintRight_toLeftOf="@+id/btnPor"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintBottom_toTopOf="@+id/btn6"/>
+
+    <Button
+        android:id="@+id/btn0"
+        android:layout_width="100dp"
+        android:layout_height="48dp"
+        android:text="0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/btnComa"
+        app:layout_constraintTop_toBottomOf="@+id/btn1"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.5" />
+
+    <Button
+        android:id="@+id/btnComa"
+        android:layout_width="55dp"
+        android:layout_height="48dp"
+        android:text=","
+        app:layout_constraintLeft_toRightOf="@id/btn0"
+        app:layout_constraintRight_toLeftOf="@id/btnIgual"
+        app:layout_constraintTop_toBottomOf="@+id/btn2"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <Button
+        android:id="@+id/btnPor"
+        android:layout_width="55dp"
+        android:layout_height="48dp"
+        android:text="*"
+        app:layout_constraintLeft_toRightOf="@+id/btn9"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintBottom_toTopOf="@+id/btnMenos"/>
+
+    <Button
+        android:id="@+id/btnMenos"
+        android:layout_width="55dp"
+        android:layout_height="48dp"
+        android:text="-"
+        app:layout_constraintLeft_toRightOf="@+id/btn6"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnPor"
+        app:layout_constraintBottom_toTopOf="@+id/btnMas"/>
+
+    <Button
+        android:id="@+id/btnMas"
+        android:layout_width="55dp"
+        android:layout_height="48dp"
+        android:text="+"
+        app:layout_constraintLeft_toRightOf="@+id/btn3"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnMenos"
+        app:layout_constraintBottom_toTopOf="@+id/btnIgual"/>
+
+    <Button
+        android:id="@+id/btnIgual"
+        android:layout_width="100dp"
+        android:layout_height="48dp"
+        android:text="="
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/btnComa"
+        app:layout_constraintTop_toBottomOf="@+id/btnMas"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <TextView
+        android:layout_width="349dp"
+        android:layout_height="55dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp"
+        android:text="Hello World!"
+        android:textAlignment="viewEnd"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/textView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintVertical_bias="0.060000002" />
 
 </android.support.constraint.ConstraintLayout>
